mySalesForceProject/temp/unpackaged/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <label>TaskStatus</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Create_Date__c</fullName>
        <label>Task Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>